--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,7 +1,12 @@
-<h1>Login</h1>
+{% extends 'base/base.html' %}
+{% block title %}Login{% endblock %}
+
+{% block content %}
+<h2>Login</h2>
 <form method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Login">
+  <input type="submit" value="Login" class="btn-primary" />
 </form>
-<p>Don't have an account? <a href="{% url 'register' %}">Sign up now</a></p>
+<p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+{% endblock %}
