--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,6 +1,13 @@
-<a href="{% url 'tasks' %}">go back</a>
+{% extends 'base/base.html' %}
+{% block title %}Delete Task{% endblock %}
+
+{% block content %}
+<h2>Delete Task</h2>
+<p>Are you sure you want to delete "{{task_delete}}"?</p>
+
 <form method="POST">
   {% csrf_token %}
-  <p>Are you sure you want to delete this task:"{{task_delete}}"</p>
-  <input type="submit" class="btn btn-danger" value="confirm delete" />
+  <input type="submit" value="Confirm Delete" class="btn-danger" />
 </form>
+<a href="{% url 'tasks' %}">Cancel</a>
+{% endblock %}
